--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>org.beangle.cache</groupId>
   <artifactId>beangle-cache-parent_2.12</artifactId>
   <packaging>pom</packaging>
-  <version>0.0.8</version>
+  <version>0.0.9-SNAPSHOT</version>
   <name>Beangle Cache Parent</name>
 
   <modules>
