--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <parent>
     <groupId>org.beangle</groupId>
     <artifactId>beangle-scala</artifactId>
-    <version>24.9</version>
+    <version>24.10</version>
   </parent>
   <groupId>org.beangle.cache</groupId>
   <artifactId>beangle-cache-parent_2.12</artifactId>
   <packaging>pom</packaging>
-  <version>0.0.13-SNAPSHOT</version>
+  <version>0.0.13</version>
   <name>Beangle Cache Parent</name>
 
   <modules>
@@ -38,11 +38,11 @@
   </scm>
 
   <properties>
-    <commons.version>5.1.0.M2</commons.version>
-    <ehcache.version>3.5.0</ehcache.version>
+    <commons.version>5.1.0</commons.version>
+    <ehcache.version>3.5.2</ehcache.version>
     <caffeine.version>2.6.2</caffeine.version>
     <jedis.version>2.9.0</jedis.version>
-    <jgroups.version>4.0.10.Final</jgroups.version>
+    <jgroups.version>4.0.11.Final</jgroups.version>
   </properties>
 
   <dependencyManagement>
