--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.beangle.cache</groupId>
     <artifactId>beangle-cache-parent_2.12</artifactId>
-    <version>0.0.13-SNAPSHOT</version>
+    <version>0.0.13</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.beangle.cache</groupId>
