--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.beangle</groupId>
     <artifactId>beangle-scala</artifactId>
-    <version>26.0-SNAPSHOT</version>
+    <version>26.2</version>
   </parent>
   <groupId>org.beangle.cache</groupId>
   <artifactId>beangle-cache-parent_2.13</artifactId>
@@ -38,11 +38,11 @@
   </scm>
 
   <properties>
-    <commons.version>5.1.8-SNAPSHOT</commons.version>
-    <ehcache.version>3.7.0</ehcache.version>
+    <commons.version>5.1.8</commons.version>
+    <ehcache.version>3.8.0</ehcache.version>
     <caffeine.version>2.7.0</caffeine.version>
-    <jedis.version>2.9.3</jedis.version>
-    <jgroups.version>4.0.19.Final</jgroups.version>
+    <jedis.version>3.1.0</jedis.version>
+    <jgroups.version>4.1.2.Final</jgroups.version>
   </properties>
 
   <dependencyManagement>
