--- a/jgroups/pom.xml
+++ b/jgroups/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.beangle.cache</groupId>
     <artifactId>beangle-cache-parent_2.13</artifactId>
-    <version>0.0.19</version>
+    <version>0.0.20-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.beangle.cache</groupId>
