--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.beangle</groupId>
     <artifactId>beangle-scala</artifactId>
-    <version>28.1</version>
+    <version>28.2</version>
   </parent>
   <groupId>org.beangle.cache</groupId>
   <artifactId>beangle-cache-parent_2.13</artifactId>
@@ -38,11 +38,11 @@
   </scm>
 
   <properties>
-    <commons.version>5.2.1</commons.version>
-    <ehcache.version>3.9.0</ehcache.version>
-    <caffeine.version>2.8.8</caffeine.version>
-    <jedis.version>3.4.1</jedis.version>
-    <jgroups.version>5.1.3.Final</jgroups.version>
+    <commons.version>5.2.2-SNAPSHOT</commons.version>
+    <ehcache.version>3.9.3</ehcache.version>
+    <caffeine.version>3.0.1</caffeine.version>
+    <jedis.version>3.6.0</jedis.version>
+    <jgroups.version>5.1.6.Final</jgroups.version>
   </properties>
 
   <dependencyManagement>
